--- a/3.linear_models/slides/slideslinearmodels.Rnw
+++ b/3.linear_models/slides/slideslinearmodels.Rnw
@@ -77,14 +77,14 @@ setPar()
 \end{frame}
 %%%%%%%%%%%
 
-\begin{frame}[fragile]{Testing the t.test}
+\begin{frame}[fragile]{Reminder t.test}
   
   <<>>=
     data("iris")
   @
 
     One t-test for sepal length between \textit{setosa} and \textit{versicolor}:
-  <<eval=FALSE>>=
+  <<eval=TRUE>>=
     t.test(x = iris$Sepal.Length[iris$Species == "setosa"],
           y = iris$Sepal.Length[iris$Species == "versicolor"])
   @
@@ -92,16 +92,122 @@ setPar()
 \end{frame}
 %%%%%%%%%%%
 
-\begin{frame}[fragile]{Testing the t.test}
-  <<boxplot, fig.width=5, fig.height=5, out.width='0.5\\textwidth'>>=
+\begin{frame}[fragile]{Reminder t.test}
+
+  <<boxplot, fig.width=5, fig.height=5, out.width='0.5\\textwidth', eval=FALSE>>=
   boxplot(Sepal.Length ~ Species, 
           data = iris[iris$Species %in% c("setosa","versicolor"),],
           drop = TRUE, ylab="Sepal length", xlab="Species")
   @
-  
+\begin{columns}
+\begin{column}{0.5\textwidth}
+<<boxplot2, fig.width=5, fig.height=5, out.width='0.9\\textwidth', echo=FALSE>>=
+  boxplot(Sepal.Length ~ Species, 
+          data = iris[iris$Species %in% c("setosa","versicolor"),],
+          drop = TRUE, ylab="Sepal length", xlab="Species")
+  @
+\end{column}
+\begin{column}{0.5\textwidth}
+  \begin{itemize}
+    \item Means: 5.006 vs. 5.936
+    \item Standard deviation: 0.35 and 0.52
+    \item Standard error (SD/ $\sqrt n$): 0.05 and 0.07
+  \end{itemize}
+\end{column}
+\end{columns}
 \end{frame}
 %%%%%%%%%%%
 
+\begin{frame}[fragile]{When do we know it is different?}
+
+t-statistic unlikely to be large by chance\\
+
+$$
+t = \frac{\color{red}{\text{Mean}_1 - \text{Mean}_2}}{\text{\color{orange}Variation}}
+\frac{\sqrt{{\text{\color{blue}{Sample Size}}}}}{\sqrt{2}}
+$$
+
+  \begin{enumerate}
+    \item \color{red}{Larger absolute difference}
+    \item \color{orange}{Smaller variability}
+    \item \color{blue}{Larger sample size}
+  \end{enumerate}
+
+\pause
+
+Same for every statistical model
+
+\end{frame}
+  
+\begin{frame}[fragile]{When do we know it is different? Try it!}
+\textbf{1. Larger absolute difference}
+<<>>=
+nbsim <- 1000
+pdistri_large <- vector(length = nbsim)
+pdistri_small <- vector(length = nbsim)
+for (i in 1:nbsim)
+  {
+  x1 <- rnorm(n = 10, mean = 2, sd = 1)
+  x2 <- rnorm(n = 10, mean = 4, sd = 1) #large diff
+  x3 <- rnorm(n = 10, mean = 2.5, sd = 1) #small diff
+  out_large <- t.test(x1, x2)
+  out_small <- t.test(x1, x3)
+  pdistri_large[i]<-out_large$p.value
+  pdistri_small[i]<-out_small$p.value
+}
+@
+\end{frame}
+%%%%%%%%%%
+\begin{frame}[fragile]{When do we know it is different? Try it!}
+\centering
+<<comphist1, dev='pdf', fig.width=14, out.height='0.5\\textheight'>>=
+par(mfrow=c(1,2), cex=2)
+hist(pdistri_large, xlim=c(0,1),
+     main=paste("Prop signif=",mean(pdistri_large<0.05)))
+hist(pdistri_small, xlim=c(0,1),
+     main=paste("Prop signi=",mean(pdistri_small<0.05)))
+par(mfrow=c(1,1))
+@
+
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{When do we know it is different? Try it!}
+
+\begin{alertblock}{Exercise}
+Follow the same approach to observe the effect of smaller variability and/or larger sample size.
+\end{alertblock}
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}{By the way, what are these p-values?}
+Blabla
+
+Reference to a null-model
+
+Under null hypothesis, uniform distribution.
+
+Implies proportion(significance) = 0.05
+\end{frame}
+%%%%%%%%%%%
+
+\begin{frame}[fragile]{T-test exercise}
+
+<<eval=FALSE>>=
+t.test(x = ..., y=...., var.equal = TRUE)
+t.test(x = ..., y=...., var.equal = FALSE)
+@
+
+What if variance are different by chance only?
+<<>>=
+set.seed(1234)
+var(rnorm(20, mean = 0, sd = 1))
+var(rnorm(20, mean = 0, sd = 1))
+@
+
+
+\end{frame}
+%%%%%%%%%%%
 \section{t-test, ANOVA, linear model}
 
 \begin{frame}[fragile]{A small example}
